--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 fondo-inicio-desktop">
+      <div class="container-fluid text-start px-0 fondo-inicio-mobile">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img
@@ -192,7 +192,7 @@
               class="col-md-6"
               style="position: absolute; top: 10px; text-align: left"
             >
-              <h1 class="text-white fs- mb-3">
+              <h1 class="text-white  mb-3">
                 Un tercio de todos los alimentos que se producen en el mundo se
                 desperdician
               </h1>
@@ -207,13 +207,29 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 fondo-inicio-mobile">
+      <div class="container-fluid text-start px-0">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img
-              class="img-fluid mb-5 hide-on-700px"
-              src="./imagenes/untercio.png"
+              class="img-fluid mb-5 hide-on-701"
+              src="./imagenes/untercio.jpg"
             />
+            <div
+              class="col-md-6"
+              style="position: absolute; top: 10px; text-align: left"
+            >
+              <h1 class="text-white  mb-3">
+                Un tercio de todos los alimentos que se producen en el mundo se
+                desperdician
+              </h1>
+              <p class="text-white fs-5">
+                Esto representa 1300 millones de <br />toneladas de alimentos,
+                de los <br />
+                cuales el 14% corresponde al sector <br />de los servicios
+                <br />
+                alimentarios (cáterin, hoteles <br />y restaurantes).
+              </p>
+            </div>
           </div>
         </div>
       </div>
