imagenes con texto

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 fondo-inicio-mobile">
+      <div class="container-fluid text-start px-0 ">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img
@@ -192,7 +192,7 @@
               class="col-md-6"
               style="position: absolute; top: 10px; text-align: left"
             >
-              <h1 class="text-white  mb-3">
+              <h1 class="text-white mb-3">
                 Un tercio de todos los alimentos que se producen en el mundo se
                 desperdician
               </h1>
@@ -202,32 +202,6 @@
                 cuales el 14% corresponde al sector <br />de los servicios
                 <br />
                 alimentarios (cáterin, hoteles <br />y restaurantes)
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container-fluid text-start px-0">
-        <div class="row">
-          <div class="col-md-12" style="position: relative">
-            <img
-              class="img-fluid mb-5 hide-on-701"
-              src="./imagenes/untercio.jpg"
-            />
-            <div
-              class="col-md-6"
-              style="position: absolute; top: 10px; text-align: left"
-            >
-              <h1 class="text-white  mb-3">
-                Un tercio de todos los alimentos que se producen en el mundo se
-                desperdician
-              </h1>
-              <p class="text-white fs-5">
-                Esto representa 1300 millones de <br />toneladas de alimentos,
-                de los <br />
-                cuales el 14% corresponde al sector <br />de los servicios
-                <br />
-                alimentarios (cáterin, hoteles <br />y restaurantes).
               </p>
             </div>
           </div>
@@ -256,12 +230,7 @@
             />
           </div>
           <div class="col-md-6 pt-5">
-            <h1
-              class="ms-4 mt-4 mb-5"
-              style="color: #1a4301;"
-            >
-              Involúcrate
-            </h1>
+            <h1 class="ms-4 mt-4 mb-5" style="color: #1a4301">Involúcrate</h1>
             <p
               class="text-dark fs-3 fw-bold ms-4 mb-5"
               style="letter-spacing: 0.06875rem"
