--- a/negocio.html
+++ b/negocio.html
@@ -164,7 +164,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 fondo-inicio-desktop">
+      <div class="container-fluid text-start px-0 fondo-inicio-desktop1">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
@@ -187,7 +187,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 fondo-inicio-mobile">
+      <div class="container-fluid text-start px-0 fondo-inicio-mobile1">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
