--- a/iniciativas.html
+++ b/iniciativas.html
@@ -381,8 +381,10 @@
                       <input
                         type="number"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
-                        id="exampleFormControlInput1"
+                        id="numeroDeTarjeta"
                         placeholder="Número de Tarjeta"
+                        onchange="ingresarNumeroDeTarjeta(this.value)"
+                        
                       />
                     </div>
                     <div class="col">
@@ -393,8 +395,9 @@
                       <input
                         type="text"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
-                        id="exampleFormControlInput1"
+                        id="nombres"
                         placeholder="Nombres del titular"
+                        onchange="ingresarNombresDelTitular(this.value)"
                       />
                     </div>
                   </div>
@@ -407,8 +410,9 @@
                       <input
                         type="text"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
-                        id="exampleFormControlInput1"
+                        id="apellidos"
                         placeholder="Apellidos del Titular"
+                        onchange="ingresarApellidosDelTitular(this.value)"
                       />
                     </div>
                     <div class="col">
@@ -419,8 +423,9 @@
                       <input
                         type="numbers"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
-                        id="exampleFormControlInput1"
+                        id="dniIngresado"
                         placeholder="DNI"
+                        onchange="ingresardniDelTitular(this.value)"
                       />
                     </div>
                   </div>
@@ -433,8 +438,9 @@
                       <input
                         type="MM / YY"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
-                        id="exampleFormControlInput1"
+                        id="fechaDeVencimiento"
                         placeholder="MM/AA"
+                        onchange="ingresarFechaDeVencimiento(this.value)"
                       />
                       <p style="font-size: 0.9375rem">Fecha de vencimiento</p>
                     </div>
@@ -452,12 +458,15 @@
                     </div>
                     <div class="col">
                       <button
+                      disabled
                         onclick="donacionExitosa()"
+                        id="botonSiguienteTres"
                         type="button"
                         class="btn btn-primary mb-5 mt-5 fs-5 text-dark fw-bold"
                         style="background-color: white; border-color: black"
                       >
                         FINALIZAR
+
                       </button>
                     </div>
                   </div>
