agregue descripción alt a cada imagen

--- a/iniciativas.html
+++ b/iniciativas.html
@@ -23,7 +23,7 @@
         <a class="navbar-brand" href="/index.html">
           <img
             class="logo"
-            src="imagenes/share_before_waste_logo.png"
+            src="imagenes/share_before_waste_logo.png"alt="logo empresa"
             alt="logo"
           />
         </a>
@@ -68,7 +68,7 @@
     <main>
       <div class="container-fluid text-start px-0 ">
         <div class="container-fluid" style="position: relative; padding: 0">
-          <img class="img-fluid w-100" src="imagenes/donaciones.png" />
+          <img class="img-fluid w-100" src="imagenes/donaciones.png" alt="persona sonriente"/>
           <div
             class="container-fluid"
             style="position: absolute; top: 10px; right: 25px"
@@ -557,7 +557,7 @@
       <div class="container-fluid mt-5 mb-1 float-md-start">
         <div class="row justify-content-between">
           <div class="col-md-1 col-sm-3">
-            <img class="img-fluid" src="imagenes/LogoUADE.png" />
+            <img class="img-fluid" src="imagenes/LogoUADE.png" alt="logo UADE" />
           </div>
           <div class="col-md-3 col-sm-9">
             <p class="derechosreservados">
