--- a/negocio.html
+++ b/negocio.html
@@ -23,7 +23,7 @@
         <a class="navbar-brand" href="/index.html">
           <img
             class="logo"
-            src="imagenes/share_before_waste_logo.png"
+            src="imagenes/share_before_waste_logo.png" alt="logo empresa"
             alt="logo"
           />
         </a>
@@ -167,7 +167,7 @@
       <div class="container-fluid text-start px-0 fondo-inicio-desktop1">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
+            <img class="img-fluid" src="./imagenes/fondonegocio.jpg" alt="imagen fondo verde" />
             <div>
               <div class="col-md-6" style="position: absolute; top: 10px">
                 <h1 class="text-white ms-4 mt-5" style="font-size: 90px">
@@ -190,7 +190,7 @@
       <div class="container-fluid text-start px-0 fondo-inicio-mobile1">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
+            <img class="img-fluid" src="./imagenes/fondonegocio.jpg"alt="imagen fondo verde" />
             <div>
               <div class="col-md-6" style="position: absolute; top: 10px">
                 <h1 class="text-white">
@@ -253,49 +253,49 @@
           <div class="col-md primera-imagen">
             <div>
               <div class="card-img">
-                <img src="imagenes/empresa6.png" class="img-fluid" />
+                <img src="imagenes/empresa6.png" class="img-fluid" alt="logo empresa" />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa5.png" class="img-fluid" />
+                <img src="imagenes/empresa5.png" class="img-fluid" alt="logo empresa"  />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa4.png" class="img-fluid" />
+                <img src="imagenes/empresa4.png" class="img-fluid"alt="logo empresa"  />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa3.png" class="img-fluid" />
+                <img src="imagenes/empresa3.png" class="img-fluid" alt="logo empresa"  />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa2.png" class="img-fluid" />
+                <img src="imagenes/empresa2.png" class="img-fluid"alt="logo empresa"  />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa1.png" class="img-fluid" />
+                <img src="imagenes/empresa1.png" class="img-fluid"alt="logo empresa"  />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa7.png" class="img-fluid" />
+                <img src="imagenes/empresa7.png" class="img-fluid"alt="logo empresa"  />
               </div>
             </div>
           </div>
@@ -318,7 +318,7 @@
       <div class="container-fluid mt-5 mb-1 float-md-start">
         <div class="row justify-content-between">
           <div class="col-md-1 col-sm-3">
-            <img class="img-fluid" src="imagenes/LogoUADE.png" />
+            <img class="img-fluid" src="imagenes/LogoUADE.png"alt="logo UADE"  />
           </div>
           <div class="col-md-3 col-sm-9">
             <p class="derechosreservados">
