--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="navbar-brand" href="/index.html">
           <img
             class="logo"
-            src="imagenes/share_before_waste_logo.png"
+            src="imagenes/share_before_waste_logo.png" alt="logo empresa"
             alt="logo"
           />
         </a>
@@ -76,7 +76,7 @@
       <div class="container-fluid text-start px-0 fondo-inicio-desktop">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid" src="./imagenes/fondoinicio.jpg" />
+            <img class="img-fluid" src="./imagenes/fondoinicio.jpg" alt="imagen fondo verde y con restos de alimentos " />
             <div class="col-md-8" style="position: absolute; top: 10px">
               <h1 class="text-white ms-5 mt-5 mt-5" style="font-size: 90px">
                 Salvemos juntos la buena comida
@@ -100,7 +100,7 @@
       <div class="container-fluid text-start px-0 fondo-inicio-mobile">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid" src="./imagenes/fondoinicio.jpg" />
+            <img class="img-fluid" src="./imagenes/fondoinicio.jpg" alt="imagen fondo verde y con restos de alimentos " />
             <div class="col-md-8" style="position: absolute; top: 10px">
               <h1 class="text-white ms-1 mt-1">
                 Salvemos juntos
@@ -145,7 +145,7 @@
           <div class="col-md-6 pt-4">
             <img
               class="img-fluid float-md-end"
-              src="imagenes/cliente.png"
+              src="imagenes/cliente.png" alt="cliente recibe productos comprados"
               alt="cliente"
             />
           </div>
@@ -173,7 +173,7 @@
               respondemos.
               <img
                 class="img-fluid rounded"
-                src="imagenes/mapaconceptual.jpg"
+                src="imagenes/mapaconceptual.jpg"alt="objetivos de la empresa"
                 alt="mapa conceptual que muestra cada valor de la
                         empresa"
               />
@@ -186,7 +186,7 @@
           <div class="col-md-12" style="position: relative">
             <img
               class="img-fluid mb-5 hide-on-701"
-              src="./imagenes/untercio.jpg"
+              src="./imagenes/untercio.jpg" alt="iamgen fondo verde"
             />
             <div
               class="col-md-6"
@@ -213,7 +213,7 @@
             <div class="col-md-12-lg-12">
               <img
                 class="img-fluid"
-                src="imagenes/datoscuriosos.jpg"
+                src="imagenes/datoscuriosos.jpg" alt="datos curiosos sobre el desperdicio de alimentos"
                 alt="datos curiosos sobre el desperdicio de alimentos"
               />
             </div>
@@ -225,7 +225,7 @@
           <div class="col-md-6 pt-5">
             <img
               class="img-fluid mt-4 ms-4"
-              src="imagenes/usandolaapp.jpg"
+              src="imagenes/usandolaapp.jpg"alt="usuario utilizabdo la app através de su teléfono"
               alt="cliente que sostiene productos del delivery"
             />
           </div>
@@ -295,7 +295,7 @@
       <div class="container-fluid mt-5 mb-1 float-md-start">
         <div class="row justify-content-between">
           <div class="col-md-1 col-sm-3">
-            <img class="img-fluid" src="imagenes/LogoUADE.png" />
+            <img class="img-fluid" src="imagenes/LogoUADE.png" alt="logo UADE" />
           </div>
           <div class="col-md-3 col-sm-9">
             <p class="derechosreservados">
