--- a/tuopinion.html
+++ b/tuopinion.html
@@ -24,7 +24,7 @@
         <a class="navbar-brand" href="/index.html">
           <img
             class="logo"
-            src="imagenes/share_before_waste_logo.png"
+            src="imagenes/share_before_waste_logo.png"alt="logo empresa" 
             alt="logo"
           />
         </a>
@@ -283,7 +283,7 @@
       <div class="container-fluid mt-5 mb-1 float-md-start">
         <div class="row justify-content-between">
           <div class="col-md-1 col-sm-3">
-            <img class="img-fluid" src="imagenes/LogoUADE.png" />
+            <img class="img-fluid" src="imagenes/LogoUADE.png"alt="logo empresa"  />
           </div>
           <div class="col-md-3 col-sm-9">
             <p class="derechosreservados">
