--- a/usuario.html
+++ b/usuario.html
@@ -23,7 +23,7 @@
         <a class="navbar-brand" href="/index.html">
           <img
             class="logo"
-            src="imagenes/share_before_waste_logo.png"
+            src="imagenes/share_before_waste_logo.png"alt="logo empresa" 
             alt="logo"
           />
         </a>
@@ -69,7 +69,7 @@
       <div class="container-fluid text-start px-0">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid mb-5" src="./imagenes/fondousuario.jpg" />
+            <img class="img-fluid mb-5" src="./imagenes/fondousuario.jpg"alt="fondo verde con descripción objetivos app"  />
             <div class="col-md-4" style="position: absolute; top: 10px"></div>
           </div>
         </div>
@@ -161,7 +161,7 @@
       <div class="container-fluid mt-5 mb-1 float-md-start">
         <div class="row justify-content-between">
           <div class="col-md-1 col-sm-3">
-            <img class="img-fluid" src="imagenes/LogoUADE.png" />
+            <img class="img-fluid" src="imagenes/LogoUADE.png"alt="logo empresa"  />
           </div>
           <div class="col-md-3 col-sm-9">
             <p class="derechosreservados">
