--- a/negocio.html
+++ b/negocio.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light py-3 py-lg-1">
       <div class="container">
-        <a class="navbar-brand" href="/index.html">
+        <a class="navbar-brand" >
           <img
             class="logo"
             src="imagenes/share_before_waste_logo.png" alt="logo empresa"
