--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light py-3 py-lg-1">
       <div class="container">
-        <a class="navbar-brand">
+        <a href="index.html" class="navbar-brand">
           <img
             class="logo"
             src="imagenes/share_before_waste_logo.png" alt="logo empresa"
             alt="logo"
+            
           />
         </a>
         <button
