--- a/negocio.html
+++ b/negocio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NEGOCIO</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta
       name="description"
       content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida"
