--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>INICIO</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./imagenes/favicon.ico.png">
     <meta
       name="description"
       content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida"
