--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>INICIO</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./imagenes/favicon.ico.png">
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./imagenes/favicon.ico.png"
+    />
     <meta
       name="description"
       content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida"
@@ -23,9 +27,9 @@
         <a href="index.html" class="navbar-brand">
           <img
             class="logo"
-            src="imagenes/share_before_waste_logo.png" alt="logo empresa"
+            src="imagenes/share_before_waste_logo.png"
+            alt="logo empresa"
             alt="logo"
-            
           />
         </a>
         <button
@@ -78,7 +82,11 @@
       <div class="container-fluid text-start px-0 fondo-inicio-desktop">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid" src="./imagenes/fondoinicio.jpg" alt="imagen fondo verde y con restos de alimentos " />
+            <img
+              class="img-fluid"
+              src="./imagenes/fondoinicio.jpg"
+              alt="imagen fondo verde y con restos de alimentos "
+            />
             <div class="col-md-8" style="position: absolute; top: 10px">
               <h1 class="text-white ms-5 mt-5 mt-5" style="font-size: 90px">
                 Salvemos juntos la buena comida
@@ -102,7 +110,11 @@
       <div class="container-fluid text-start px-0 fondo-inicio-mobile">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid" src="./imagenes/fondoinicio.jpg" alt="imagen fondo verde y con restos de alimentos " />
+            <img
+              class="img-fluid"
+              src="./imagenes/fondoinicio.jpg"
+              alt="imagen fondo verde y con restos de alimentos "
+            />
             <div class="col-md-8" style="position: absolute; top: 10px">
               <h1 class="text-white ms-1 mt-1">
                 Salvemos juntos
@@ -147,7 +159,8 @@
           <div class="col-md-6 pt-4">
             <img
               class="img-fluid float-md-end"
-              src="imagenes/cliente.png" alt="cliente recibe productos comprados"
+              src="imagenes/cliente.png"
+              alt="cliente recibe productos comprados"
               alt="cliente"
             />
           </div>
@@ -175,7 +188,8 @@
               respondemos.
               <img
                 class="img-fluid rounded"
-                src="imagenes/mapaconceptual.jpg"alt="objetivos de la empresa"
+                src="imagenes/mapaconceptual.jpg"
+                alt="objetivos de la empresa"
                 alt="mapa conceptual que muestra cada valor de la
                         empresa"
               />
@@ -183,12 +197,13 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid text-start px-0 ">
+      <div class="container-fluid text-start px-0">
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img
               class="img-fluid mb-5 hide-on-701"
-              src="./imagenes/untercio.jpg" alt="iamgen fondo verde"
+              src="./imagenes/untercio.jpg"
+              alt="iamgen fondo verde"
             />
             <div
               class="col-md-6"
@@ -215,7 +230,8 @@
             <div class="col-md-12-lg-12">
               <img
                 class="img-fluid"
-                src="imagenes/datoscuriosos.jpg" alt="datos curiosos sobre el desperdicio de alimentos"
+                src="imagenes/datoscuriosos.jpg"
+                alt="datos curiosos sobre el desperdicio de alimentos"
                 alt="datos curiosos sobre el desperdicio de alimentos"
               />
             </div>
@@ -227,7 +243,8 @@
           <div class="col-md-6 pt-5">
             <img
               class="img-fluid mt-4 ms-4"
-              src="imagenes/usandolaapp.jpg"alt="usuario utilizabdo la app através de su teléfono"
+              src="imagenes/usandolaapp.jpg"
+              alt="usuario utilizabdo la app através de su teléfono"
               alt="cliente que sostiene productos del delivery"
             />
           </div>
@@ -297,7 +314,11 @@
       <div class="container-fluid mt-5 mb-1 float-md-start">
         <div class="row justify-content-between">
           <div class="col-md-1 col-sm-3">
-            <img class="img-fluid" src="imagenes/LogoUADE.png" alt="logo UADE" />
+            <img
+              class="img-fluid"
+              src="imagenes/LogoUADE.png"
+              alt="logo UADE"
+            />
           </div>
           <div class="col-md-3 col-sm-9">
             <p class="derechosreservados">
