--- a/negocio.html
+++ b/negocio.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NEGOCIO</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./imagenes/favicon.ico.png"
+    />
     <meta
       name="description"
       content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida"
@@ -21,10 +25,11 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light py-3 py-lg-1">
       <div class="container">
-        <a href="index.html" class="navbar-brand" >
+        <a href="index.html" class="navbar-brand">
           <img
             class="logo"
-            src="imagenes/share_before_waste_logo.png" alt="logo empresa"
+            src="imagenes/share_before_waste_logo.png"
+            alt="logo empresa"
             alt="logo"
           />
         </a>
@@ -168,7 +173,11 @@
       <div class="container-fluid text-start px-0 fondo-inicio-desktop1">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid" src="./imagenes/fondonegocio.jpg" alt="imagen fondo verde" />
+            <img
+              class="img-fluid"
+              src="./imagenes/fondonegocio.jpg"
+              alt="imagen fondo verde"
+            />
             <div>
               <div class="col-md-6" style="position: absolute; top: 10px">
                 <h1 class="text-white ms-4 mt-5" style="font-size: 90px">
@@ -191,7 +200,11 @@
       <div class="container-fluid text-start px-0 fondo-inicio-mobile1">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid" src="./imagenes/fondonegocio.jpg"alt="imagen fondo verde" />
+            <img
+              class="img-fluid"
+              src="./imagenes/fondonegocio.jpg"
+              alt="imagen fondo verde"
+            />
             <div>
               <div class="col-md-6" style="position: absolute; top: 10px">
                 <h1 class="text-white">
@@ -254,49 +267,77 @@
           <div class="col-md primera-imagen">
             <div>
               <div class="card-img">
-                <img src="imagenes/empresa6.png" class="img-fluid" alt="logo empresa" />
+                <img
+                  src="imagenes/empresa6.png"
+                  class="img-fluid"
+                  alt="logo empresa"
+                />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa5.png" class="img-fluid" alt="logo empresa"  />
+                <img
+                  src="imagenes/empresa5.png"
+                  class="img-fluid"
+                  alt="logo empresa"
+                />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa4.png" class="img-fluid"alt="logo empresa"  />
+                <img
+                  src="imagenes/empresa4.png"
+                  class="img-fluid"
+                  alt="logo empresa"
+                />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa3.png" class="img-fluid" alt="logo empresa"  />
+                <img
+                  src="imagenes/empresa3.png"
+                  class="img-fluid"
+                  alt="logo empresa"
+                />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa2.png" class="img-fluid"alt="logo empresa"  />
+                <img
+                  src="imagenes/empresa2.png"
+                  class="img-fluid"
+                  alt="logo empresa"
+                />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa1.png" class="img-fluid"alt="logo empresa"  />
+                <img
+                  src="imagenes/empresa1.png"
+                  class="img-fluid"
+                  alt="logo empresa"
+                />
               </div>
             </div>
           </div>
           <div class="col-md">
             <div>
               <div class="card-img hide-mobile">
-                <img src="imagenes/empresa7.png" class="img-fluid"alt="logo empresa"  />
+                <img
+                  src="imagenes/empresa7.png"
+                  class="img-fluid"
+                  alt="logo empresa"
+                />
               </div>
             </div>
           </div>
@@ -319,7 +360,11 @@
       <div class="container-fluid mt-5 mb-1 float-md-start">
         <div class="row justify-content-between">
           <div class="col-md-1 col-sm-3">
-            <img class="img-fluid" src="imagenes/LogoUADE.png"alt="logo UADE"  />
+            <img
+              class="img-fluid"
+              src="imagenes/LogoUADE.png"
+              alt="logo UADE"
+            />
           </div>
           <div class="col-md-3 col-sm-9">
             <p class="derechosreservados">
