--- a/usuario.html
+++ b/usuario.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>USUARIO</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./imagenes/favicon.ico.png"
+    />
     <meta
       name="description"
       content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida"
@@ -19,12 +23,13 @@
     <script src="js/newsletter.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light  py-3 py-lg-1">
+    <nav class="navbar navbar-expand-md navbar-light bg-light py-3 py-lg-1">
       <div class="container">
         <a href="index.html" class="navbar-brand">
           <img
             class="logo"
-            src="imagenes/share_before_waste_logo.png"alt="logo empresa" 
+            src="imagenes/share_before_waste_logo.png"
+            alt="logo empresa"
             alt="logo"
           />
         </a>
@@ -44,25 +49,33 @@
           style="justify-content: end"
           id="navbarNav"
         >
-        <ul class="navbar-nav">
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="index.html">INICIO</a>
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="iniciativas.html"
-              >INICIATIVAS</a
-            >
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="negocio.html">NEGOCIO</a>
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="usuario.html">USUARIO</a>
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="tuopinion.html">TU OPINIÓN</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="index.html"
+                >INICIO</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="iniciativas.html"
+                >INICIATIVAS</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="negocio.html"
+                >NEGOCIO</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="usuario.html"
+                >USUARIO</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="tuopinion.html"
+                >TU OPINIÓN</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -70,7 +83,11 @@
       <div class="container-fluid text-start px-0">
         <div class="row">
           <div class="col-md-12" style="position: relative">
-            <img class="img-fluid mb-5" src="./imagenes/fondousuario.jpg"alt="fondo verde con descripción objetivos app"  />
+            <img
+              class="img-fluid mb-5"
+              src="./imagenes/fondousuario.jpg"
+              alt="fondo verde con descripción objetivos app"
+            />
             <div class="col-md-4" style="position: absolute; top: 10px"></div>
           </div>
         </div>
@@ -100,7 +117,7 @@
         <div class="row">
           <div class="col-md-6">
             <a
-            onclick="newsletter()"
+              onclick="newsletter()"
               type="button"
               class="button rounded-pill fs-3 text-white fw-bold ms-4"
               style="
@@ -124,9 +141,10 @@
                 height: 85px;
                 justify-content: center;
               "
-              href="./instructivo/InstructivoShareBeforeWaste.png" alt="_blank"
+              href="./instructivo/InstructivoShareBeforeWaste.png"
+              alt="_blank"
               download
-              >
+            >
               <p class="mt-3 fs3 me-3 ms-3">
                 INSTRUCTIVO
                 <svg
@@ -135,7 +153,8 @@
                   height="16"
                   viewBox="0 0 22 16"
                   fill="none"
-                ><path
+                >
+                  <path
                     d="M18.48 6.98942C18.6209 6.62161 18.7 6.21942 18.7 5.80005C18.7 3.97817 17.2219 2.50005 15.4 2.50005C14.7228 2.50005 14.0903 2.7063 13.5678 3.05692C12.6156 1.40692 10.8384 0.300049 8.8 0.300049C5.76125 0.300049 3.3 2.7613 3.3 5.80005C3.3 5.89286 3.30344 5.98567 3.30687 6.07849C1.38187 6.75567 0 8.5913 0 10.75C0 13.4829 2.21719 15.7 4.95 15.7H17.6C20.0303 15.7 22 13.7304 22 11.3C22 9.17224 20.4875 7.39505 18.48 6.98942ZM13.9116 10.0385L10.2884 13.6616C10.0753 13.8747 9.72469 13.8747 9.51156 13.6616L5.88844 10.0385C5.54125 9.6913 5.78875 9.10005 6.27688 9.10005H8.525V5.25005C8.525 4.94755 8.7725 4.70005 9.075 4.70005H10.725C11.0275 4.70005 11.275 4.94755 11.275 5.25005V9.10005H13.5231C14.0113 9.10005 14.2588 9.6913 13.9116 10.0385Z"
                     fill="white"
                   />
@@ -162,7 +181,11 @@
       <div class="container-fluid mt-5 mb-1 float-md-start">
         <div class="row justify-content-between">
           <div class="col-md-1 col-sm-3">
-            <img class="img-fluid" src="imagenes/LogoUADE.png"alt="logo empresa"  />
+            <img
+              class="img-fluid"
+              src="imagenes/LogoUADE.png"
+              alt="logo empresa"
+            />
           </div>
           <div class="col-md-3 col-sm-9">
             <p class="derechosreservados">
