--- a/iniciativas.html
+++ b/iniciativas.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>INICIATIVAS</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./imagenes/favicon.ico.png"
+    />
     <meta
       name="description"
       content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida"
@@ -19,12 +23,13 @@
     <script src="js/iniciativas.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light  py-3 py-lg-1">
+    <nav class="navbar navbar-expand-md navbar-light bg-light py-3 py-lg-1">
       <div class="container">
         <a href="index.html" class="navbar-brand">
           <img
             class="logo"
-            src="imagenes/share_before_waste_logo.png"alt="logo empresa"
+            src="imagenes/share_before_waste_logo.png"
+            alt="logo empresa"
             alt="logo"
           />
         </a>
@@ -44,38 +49,50 @@
           style="justify-content: end"
           id="navbarNav"
         >
-        <ul class="navbar-nav">
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="index.html">INICIO</a>
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="iniciativas.html"
-              >INICIATIVAS</a
-            >
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="negocio.html">NEGOCIO</a>
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="usuario.html">USUARIO</a>
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="tuopinion.html">TU OPINIÓN</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="index.html"
+                >INICIO</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="iniciativas.html"
+                >INICIATIVAS</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="negocio.html"
+                >NEGOCIO</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="usuario.html"
+                >USUARIO</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="tuopinion.html"
+                >TU OPINIÓN</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
     <main>
-      <div class="container-fluid text-start px-0 ">
+      <div class="container-fluid text-start px-0">
         <div class="container-fluid" style="position: relative; padding: 0">
-          <img class="img-fluid w-100" src="imagenes/donaciones.png" alt="persona sonriente"/>
+          <img
+            class="img-fluid w-100"
+            src="imagenes/donaciones.png"
+            alt="persona sonriente"
+          />
           <div
             class="container-fluid"
             style="position: absolute; top: 10px; right: 25px"
           >
             <!-- PASO1 -->
-            <div class="row" id="paso1" >
+            <div class="row" id="paso1">
               <div
                 class="offset-md-7 bg-white rounded mt-3 me-5 border border-dark p-x0"
                 style="width: 38.8125rem; height: 34.4375rem"
@@ -155,7 +172,7 @@
                       <input
                         onchange="agregarOtroMonto()"
                         type="number"
-                        style="display:none;"
+                        style="display: none"
                         class="rounded form-control border border-dark me-5 text-dark fs-5 border border-dark"
                         id="otroMonto"
                         placeholder="Ingrese monto"
@@ -175,42 +192,41 @@
                         class="form-select border border-dark"
                         aria-label="Seleccionar una provincia"
                       >
-                        <option value="noSeleccionado" selected>Seleccione una provincia</option>
+                        <option value="noSeleccionado" selected>
+                          Seleccione una provincia
+                        </option>
                         <option value="buenosAires">Buenos Aires</option>
                         <option value="mendoza">Mendoza</option>
                         <option value="cordoba">Córdoba</option>
                       </select>
                     </div>
                     <div class="col">
-                      <label 
-                      for="localidad"
-                      style="background-color: white; border-color: black"
-                      class="form-label fs-5 "
+                      <label
+                        for="localidad"
+                        style="background-color: white; border-color: black"
+                        class="form-label fs-5"
                         >Localidad</label
                       >
                       <select
                         id="localidad"
                         class="form-select border border-dark"
                         aria-label="Seleccionar una localidad"
-                      >
-                        
-                      </select>
+                      ></select>
                     </div>
                   </div>
                   <div class="row mt-2">
                     <div class="col">
-                      <label 
-                      for="comedor"
-                      style="background-color: white; border-color: black"
-                      class="form-label fs-5 mt-3"
+                      <label
+                        for="comedor"
+                        style="background-color: white; border-color: black"
+                        class="form-label fs-5 mt-3"
                         >Comedor</label
                       >
                       <select
                         id="comedor"
-                        class="form-select  border border-dark"
+                        class="form-select border border-dark"
                         aria-label="Seleccionar un comedor"
-                      >
-                      </select>
+                      ></select>
                     </div>
                     <div class="col">
                       <button
@@ -385,7 +401,6 @@
                         id="numeroDeTarjeta"
                         placeholder="Número de Tarjeta"
                         onchange="ingresarNumeroDeTarjeta(this.value)"
-                        
                       />
                     </div>
                     <div class="col">
@@ -459,7 +474,7 @@
                     </div>
                     <div class="col">
                       <button
-                      disabled
+                        disabled
                         onclick="donacionExitosa()"
                         id="botonSiguienteTres"
                         type="button"
@@ -467,7 +482,6 @@
                         style="background-color: white; border-color: black"
                       >
                         FINALIZAR
-
                       </button>
                     </div>
                   </div>
@@ -476,65 +490,64 @@
             </div>
           </div>
         </div>
-        </div>
-        <!-- fin paso 3--->
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-6">
-              <h1 class="pt-4 ms-4 mt-3 mb-4" style="color: #1a4301">
-                ¿Qué pasa si no se logra vender todo el excedente en un día?
-              </h1>
-              <p class="text-dark fs-3 ms-4 mt-2">
-                Redistribuimos los excedentes alimentarios desde comedores hasta
-                los hogares que necesitan alimentos.
-              </p>
-              <p class="text-dark fs-3 ms-4 mt-3 mb-5">
-                Diseñamos un proceso para que las empresas gastronómicas puedan
-                disponer de forma segura toda la comida que les sobra y luego
-                registrar en la aplicación cual fue el sobrante y con esta
-                información, conectamos con las entidades sociales, y nuestros
-                repartidores redistribuyen los alimentos sobrantes.
-              </p>
-            </div>
+      </div>
+      <!-- fin paso 3--->
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6">
+            <h1 class="pt-4 ms-4 mt-3 mb-4" style="color: #1a4301">
+              ¿Qué pasa si no se logra vender todo el excedente en un día?
+            </h1>
+            <p class="text-dark fs-3 ms-4 mt-2">
+              Redistribuimos los excedentes alimentarios desde comedores hasta
+              los hogares que necesitan alimentos.
+            </p>
+            <p class="text-dark fs-3 ms-4 mt-3 mb-5">
+              Diseñamos un proceso para que las empresas gastronómicas puedan
+              disponer de forma segura toda la comida que les sobra y luego
+              registrar en la aplicación cual fue el sobrante y con esta
+              información, conectamos con las entidades sociales, y nuestros
+              repartidores redistribuyen los alimentos sobrantes.
+            </p>
           </div>
         </div>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12">
-              <div
-                id="carouselExampleSlidesOnly"
-                class="carousel slide"
-                data-bs-ride="carousel"
-              >
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img
-                      src="imagenes/comedor1.png"
-                      class="d-block w-100"
-                      alt="comedor de personas vulnerables"
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="imagenes/comedor2.png"
-                      class="d-block w-100"
-                      alt="comedor de personas vulnerables"
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="imagenes/comedor3.jpg"
-                      class="d-block w-100"
-                      alt="comedor de personas vulnerables"
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="imagenes/comedor4.jpg"
-                      class="d-block w-100"
-                      alt="comedor de personas vulnerables"
-                    />
-                  </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <div
+              id="carouselExampleSlidesOnly"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="imagenes/comedor1.png"
+                    class="d-block w-100"
+                    alt="comedor de personas vulnerables"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="imagenes/comedor2.png"
+                    class="d-block w-100"
+                    alt="comedor de personas vulnerables"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="imagenes/comedor3.jpg"
+                    class="d-block w-100"
+                    alt="comedor de personas vulnerables"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="imagenes/comedor4.jpg"
+                    class="d-block w-100"
+                    alt="comedor de personas vulnerables"
+                  />
                 </div>
               </div>
             </div>
@@ -558,7 +571,11 @@
       <div class="container-fluid mt-5 mb-1 float-md-start">
         <div class="row justify-content-between">
           <div class="col-md-1 col-sm-3">
-            <img class="img-fluid" src="imagenes/LogoUADE.png" alt="logo UADE" />
+            <img
+              class="img-fluid"
+              src="imagenes/LogoUADE.png"
+              alt="logo UADE"
+            />
           </div>
           <div class="col-md-3 col-sm-9">
             <p class="derechosreservados">
