--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
               class="col-md-6"
               style="position: absolute; top: 10px; text-align: left"
             >
-              <h1 class="text-white mb-3">
+            <h1 class="text-white ms-5  mt-5" style="font-size: 4rem">
                 Un tercio de todos los alimentos que se producen en el mundo se
                 desperdician
               </h1>
-              <p class="text-white fs-5">
+              <p class="text-white fs-3 ms-5">
                 Esto representa 1300 millones de <br />toneladas de alimentos,
                 de los <br />
                 cuales el 14% corresponde al sector <br />de los servicios
